--- a/settings.gradle
+++ b/settings.gradle
@@ -12,7 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-
-rootProject.name = "eArziki Marketplace"
-include(":app")
- 
+rootProject.name = "eArziki Market"
+include ':app'
