--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,6 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.8.10'
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.8.10'
     id 'kotlin-parcelize'
-
 }
 
 android {
@@ -62,8 +61,10 @@ android {
     composeOptions {
         kotlinCompilerExtensionVersion '1.4.3'
     }
+
     testOptions {
         unitTests {
+            //useJUnitPlatform()
             includeAndroidResources = true
             all {
                 jvmArgs '-noverify', '--add-opens', 'java.base/java.lang=ALL-UNNAMED', '--add-opens', 'java.base/java.io=ALL-UNNAMED'
@@ -78,6 +79,9 @@ android {
     }
 }
 
+tasks.withType(Test).configureEach {
+    useJUnitPlatform()
+}
 
 dependencies {
     implementation 'androidx.core:core-ktx:1.8.0'
@@ -89,6 +93,7 @@ dependencies {
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation platform('androidx.compose:compose-bom:2022.10.00')
@@ -114,6 +119,7 @@ dependencies {
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.27.0"
     implementation "io.coil-kt:coil-compose:2.2.0"
     implementation 'androidx.appcompat:appcompat:1.6.1'
+
     androidTestImplementation 'androidx.arch.core:core-testing:2.2.0'
     testImplementation 'org.mockito:mockito-core:4.0.0'
     testImplementation 'androidx.test:core:1.5.0'
@@ -121,5 +127,8 @@ dependencies {
     testImplementation 'org.mockito.kotlin:mockito-kotlin:4.0.0'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0'
     testImplementation 'io.mockk:mockk:1.12.0'
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.8.1")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.8.1")
+    testImplementation "androidx.arch.core:core-testing:2.2.0"
 
 }
