--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,6 +92,20 @@ tasks.withType(Test).configureEach {
     useJUnitPlatform()
 }
 
+tasks.withType(dokkaHtml.getClass()).configureEach {
+    pluginsMapConfiguration.set(
+            ["org.jetbrains.dokka.base.DokkaBase": """{ "separateInheritedMembers": true}"""]
+    )
+}
+
+dokkaHtml.configure {
+    dokkaSourceSets {
+        named ("main") {
+            skipDeprecated.set(true)
+        }
+    }
+}
+
 dependencies {
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
